# parasitic-ai-mafia

./: .gitignore  FINDINGS.md  README.md  analysis.py  analyze_results.py  behavioral_markers.py  differential_scorer.py  epidemiology.py  experiment_config.yaml  headless_game.py  main.py  models.yaml  monitor_progress.sh  persona_scorer.py  pyproject.toml  run_control_experimental.py  run_experiments.py  run_full_experiment.sh  seeds.csv  seeds.py  test_differential_scoring.py  test_improved_injection.py  visualize_game.py  viz_utils.py
logs/: epi-20251027_173414.json  epi-20251027_173435.json  epi-20251027_174733.json  epi-20251027_174828.json  epi-20251027_180052.json  epi-20251027_181516.json  epi-20251027_181520.json  epi-20251027_182106.json  epi-20251027_184106.json  epi-20251027_184150.json  epi-20251027_184638.json  epi-20251027_185354.json  epi-20251027_185733.json  epi-20251027_190748.json  epi-20251027_190908.json  epi-20251027_191829.json  epi-20251027_193046.json  epi-20251027_200410.json  epi-20251028_165221.json  epi-20251028_171252.json  epi-20251028_172941.json  epi-20251028_174646.json  epi-20251028_175918.json  epi-20251028_181344.json  epi-20251028_183331.json  epi-20251028_185228.json  epi-20251028_191111.json  epi-20251028_193003.json  epi-20251028_195120.json  epi-20251028_202111.json  epi-20251028_203422.json  epi-20251028_204910.json  epi-20251028_210245.json  epi-20251028_212721.json  epi-20251028_214738.json  epi-20251028_221859.json  epi-20251028_224040.json  epi-20251028_225850.json  epi-20251028_231516.json  epi-20251028_232313.json  (+75 more)
(+45 files in other folders)
