[project]
name = "sus-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aisitools",
    "anthropic>=0.69.0",
    "inspect-ai>=0.3.136",
    "openai>=2.1.0",
    "textual>=2.1.2",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
]

[tool.uv.sources]
aisitools = { git = "ssh://git@github.com/AI-Safety-Institute/aisi-inspect-tools" }
